2013-09-23  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	Fix automake warnings.

	* datrie/Makefile.am, tools/Makefile.am:
	  - Replace deprecated INCLUDES with AM_CPPFLAGS.

2013-09-23  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* configure.ac: Post-release version suffix added.

2013-01-23  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* NEWS, configure.ac:
	=== Version 0.2.6 ===

2013-01-22  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	Use xz compression for release tarball.

	* configure.ac:
	  - Specify "dist-xz no-dist-gzip" options to AM_INIT_AUTOMAKE.

2012-08-06  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	Improve AlphaMap range merging.

	* datrie/alpha-map.c (alpha_map_add_range):
	  - Also try to merge adjacent ranges. Otherwise, adding one by one
	    character will result in linear search on alphabet set.

	Thanks Mikhail Korobov <kmike84@gmail.com> for the report.

2012-08-05  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	Migrate trie_enumerate() to the new TrieIterator.

	This improves performance by 10%, and recursion stacks are also
	eliminated.

	* datrie/trie.c (trie_enumerate):
	  - Replace da_enumerate() call with TrieIterator loop.
	* datrie/trie.c (-trie_da_enum_func, -_TrieEnumData):
	* datrie/darray.h, datrie/darray.c
	  (-da_enumerate, -da_get_transition_key, -DAEnumFunc,
	   -da_enumerate_recursive):
	  - Drop now-unused codes.

2012-08-05  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	Optimize key calculation for TrieIterator.

	* datrie/Makefile.am +datrie/dstring.h +datrie/dstring-private.h
	  +datrie/dstring.c +datrie/trie-string.h +datrie/trie-string.c:
	  - Add dynamic string classes DString and TrieString.
	* datrie/trie.c:
	  - (TrieIterator): Add "key" dynamic trie string member for
	    incrementally gathering the key while iterating.
	  - Initialize "key" member to NULL on construction. Only allocate and
	    free it on branching root states.
	* datrie/darray.h, datrie/darray.c